# chinese-poetry-llm

./: .env.example  .gitignore  LICENSE  README.cn.md  README.md  pyproject.toml  requirements.txt
data/: sample.csv
dataset/: 1_convert.py  1_rough_genre.py  2_strict_genre.py  3_score_and_spark.py  4_analyze_and_select.py
dataset/analysis/: genre_distribution.md
eval/: eval.py  eval_config.py  log_analyzer.py
grpo/: grpo_config.py  train_GRPO.py
poetry_core/: __init__.py  poetry_data_loader.py  poetry_evaluator.py  poetry_generator.py  poetry_logger.py
sft/: sft_config.py  train_sft.py
