[project]
name = "chinese-poetry-llm"
version = "0.1.0"
description = "Classical Chinese poetry generation"
requires-python = ">=3.11,<3.13"
dependencies = [
    # ML core
    "torch>=2.10.0",
    "unsloth>=2026.7.0",
    "trl>=0.24.0",
    "transformers>=5.5.0",
    "datasets>=4.3.0",
    "accelerate>=1.14.0",
    "peft>=0.19.0",
    "bitsandbytes>=0.49.0",
    "sentencepiece>=0.2.0",
    "xformers>=0.0.35",
    # Data & API
    "httpx[socks]>=0.28.0",
    "pandas>=2.3.0",
    "numpy>=2.2.0",
    "openai>=1.107.0",
    "pydantic>=2.11.0",
    "opencc-python-reimplemented>=0.1.7",
    # Chinese NLP
    "pypinyin>=0.55.0",
    # Evaluation & visualization
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    # Experiment tracking
    "swanlab>=0.9.0",
]

[tool.uv]
# Pin to PyTorch CUDA 12.8 index for GPU training
python-preference = "managed"
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchao = { index = "pytorch-cu128" }
